2019-03-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sdas/asxxsrc/sdas.c,
	* sdas/asxxsrc/sdas.h,
	* sdas/aspdk14/pdk14mch.c,
	* sdas/aspdk15/pdk15mch.c: possible fix for bug #2890

2019-03-23 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.c: fix bug #2099
	* support/regression/tests/gcc-torture-execute-20041019-1.c:
	  re-enable test

2019-03-21 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Update manual.

2019-03-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c: fix bug #2834
	* support/regression/tests/bug-2834.c: re-enable test
	* src/ds390/ralloc.c: fix bug #2603
	* support/regression/tests/gcc-torture-execute-20021120-1.c:
	  re-enable test

2019-03-21 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/pdk14/__setjmp.s,
	  device/lib/pdk15/__setjmp.s,
	  device/lib/pdk14/Makefile.in,
	  device/lib/pdk15/Makefile.in,
	  support/regression/tests/setjmp.c,
	  support/regression/tests/gcc-torture-execute-20010409-1.c,
	  support/regression/tests/gcc-torture-execute-pr60003.c:
	  setjmp() / longjmp() for pdk.

2019-03-21 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/gcc-torture-execute-20051110-2.c:
	  Enable a test (bug got fixed a few days ago via patch by Nicolas).
	* device/lib/Makefile.in,
	  device/lib/*/Makefile.in,
	  support/regression/tests/wchar.c,
	  support/regression/tests/bug-2855.c:
	  Fix bug #2855.

2019-03-21 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCopt.c: fix bug #2793
	* support/regression/tests/bug-2793: re-enable test
	* support/regression/tests/gcc-torture-execute-20120817-1.c:
	  re-enable test

2019-03-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/main.c: fix bug #2713
	* support/regression/tests/bug2783061.c: bug #2713 tested

2019-03-20 Philipp Klaus Krause <pkk AT spth.de>

	* support/scripts/sdcc.nsi:
	  Include pdk libraries in Windows installer.
