@@ -1,3 +1,8 @@
+2019-03-28 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/SDCCglue.c:
+	  Fix bug #2837, patch by Alan Cox.
+
 2019-03-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* sdas/asxxsrc/sdas.c,
